Patch footnote position in appendix

--- a/beamerouterthemefocus.sty
+++ b/beamerouterthemefocus.sty
@@ -159,6 +159,7 @@
     %
     % Reset footline height and determine it for the current slide.
     \setlength{\focus@pbar@height}{0cm}%
+    \focus@calculatefootheight%
     %
     % If not appendix.
     \ifnum\mainend<0 % From package appendixnumberbeamer.
