Fix caption colors and fonts + indent

--- a/beamercolorthemefocus.sty
+++ b/beamercolorthemefocus.sty
@@ -18,6 +18,8 @@
 
 \mode<presentation>
 
+
+% DEFINE COLORS. ---------------------------------------------------------------
 \definecolor{main}{RGB}{64, 64, 64}
 \definecolor{background}{RGB}{239, 239, 239}
 
@@ -25,6 +27,7 @@
 \definecolor{example}{RGB}{0, 110, 0}
 
 
+% SET COLORS. ------------------------------------------------------------------
 \setbeamercolor{normal text}{fg=main, bg=background}
 \setbeamercolor{alerted text}{fg=alert}
 \setbeamercolor{example text}{fg=example}
@@ -51,6 +54,8 @@
 
 \setbeamercolor{description item}{fg=main!70!black}
 \setbeamercolor{description subitem}{fg=main!70!black}
+
+\setbeamercolor{caption name}{fg=main}
 
 \setbeamercolor{section in toc}{fg=main}
 \setbeamercolor{subsection in toc}{fg=main}
