--- a/beamerfontthemefocus.sty
+++ b/beamerfontthemefocus.sty
@@ -18,6 +18,8 @@
 
 \mode<presentation>
 
+
+% SET FONTS. -------------------------------------------------------------------
 \setbeamerfont{title}{size=\huge, shape=\scshape\bfseries}
 \setbeamerfont{subtitle}{size=\Large, shape=\scshape, parent=structure}
 \setbeamerfont{author}{size=\Large, shape=\scshape}
@@ -31,6 +33,10 @@
 \setbeamerfont{footline}{size=\scriptsize}
 
 \setbeamerfont{focusframe}{size=\huge, shape=\scshape}
+
+\setbeamerfont{description item}{shape=\bfseries}
+
+\setbeamerfont{caption name}{shape=\bfseries}
 
 \setbeamerfont{bibliography item}{size=\small, shape=\scshape}
 \setbeamerfont{bibliography entry author}{size=\small, shape=\scshape}
