--- a/beamerinnerthemefocus.sty
+++ b/beamerinnerthemefocus.sty
@@ -1,5 +1,5 @@
 % Copyright (C) 2018 Pasquale Claudio Africa.
-%               2018 Sebastia Friedl.
+%               2018 Sebastian Friedl.
 %
 % This file is part of beamerthemefocus.
 %
@@ -21,8 +21,7 @@
 \RequirePackage{tikz}
 
 
-% CUSTOMIZE STRUCTURE ELEMENTS. ---------------------------------------------------------------------
-
+% CUSTOMIZE STRUCTURE ELEMENTS. ------------------------------------------------
 \setbeamertemplate{blocks}[default]
 
 \setbeamertemplate{section in toc}[square]
@@ -32,9 +31,7 @@
 \setbeamertemplate{itemize subitem}[triangle]
 
 
-
-% STRUCTURE FRAME TEMPLATE DEFINITIONS. -------------------------------------------------------------
-
+% STRUCTURE FRAME TEMPLATE DEFINITIONS. ----------------------------------------
 % Title page.
 \defbeamertemplate*{title page}{focus}{%
     {\usebeamercolor{frametitle}\colorlet{focus@@temp}{bg}%
