Fix for \printbibliography

--- a/beamerinnerthemefocus.sty
+++ b/beamerinnerthemefocus.sty
@@ -101,7 +101,7 @@
     \end{minipage}
 }
 
-\AtBeginSection{%
+\AtBeginSection[]{%
     \begin{frame}[plain, noframenumbering]{}
         \sectionpage
     \end{frame}%
