--- a/beamercolorthemefocus.sty
+++ b/beamercolorthemefocus.sty
@@ -1,8 +1,10 @@
-% Copyright (C) 2018 Pasquale Claudio Africa.
-%               2018 Sebastian Friedl.
+% Copyright (C) 2018-2019 Pasquale Claudio Africa and the LaTeX community.
+% A full list of contributors can be found at
 %
+%     https://github.com/elauksap/focus-beamertheme
+% 
 % This file is part of beamerthemefocus.
-%
+% 
 % beamerthemefocus is free software: you can redistribute it and/or modify
 % it under the terms of the GNU General Public License as published by
 % the Free Software Foundation, either version 3 of the License, or
