--- a/beamerinnerthemefocus.sty
+++ b/beamerinnerthemefocus.sty
@@ -1,8 +1,10 @@
-% Copyright (C) 2018 Pasquale Claudio Africa.
-%               2018 Sebastian Friedl.
+% Copyright (C) 2018-2019 Pasquale Claudio Africa and the LaTeX community.
+% A full list of contributors can be found at
 %
+%     https://github.com/elauksap/focus-beamertheme
+% 
 % This file is part of beamerthemefocus.
-%
+% 
 % beamerthemefocus is free software: you can redistribute it and/or modify
 % it under the terms of the GNU General Public License as published by
 % the Free Software Foundation, either version 3 of the License, or
@@ -34,10 +36,12 @@
 % STRUCTURE FRAME TEMPLATE DEFINITIONS. ----------------------------------------
 % Title page.
 \defbeamertemplate*{title page}{focus}{%
-    {\usebeamercolor{frametitle}\colorlet{focus@@temp}{bg}%
-        \begin{tikzpicture}[overlay, remember picture]
-            \fill[color=focus@@temp] (current page.north west) rectangle ([shift = {(0, -0.45\paperheight)}] current page.north east);
-        \end{tikzpicture}}
+    {%
+       	\usebeamercolor{frametitle}\colorlet{focus@@temp}{bg}%
+	    \begin{tikzpicture}[overlay, remember picture]
+	        \fill[color=focus@@temp] (current page.north west) rectangle ([shift = {(0, -0.45\paperheight)}] current page.north east);
+	    \end{tikzpicture}
+    }
     
     \vspace{-1.65\baselineskip}
     \begin{minipage}[b][0.35\paperheight]{\textwidth}
@@ -75,8 +79,8 @@
     \begin{minipage}[t]{\textwidth}
         \usebeamerfont{date}{\insertdate}
     \end{minipage}
-    
-    \vspace*{5\baselineskip}
+
+   	\vspace*{0pt plus 100fill}
     
     \addtocounter{framenumber}{-1}
 }
@@ -90,15 +94,14 @@
         \end{tikzpicture}%
     }
     
-    \vspace{-2\baselineskip}
+    \vspace{-2.5\baselineskip}
     \begin{minipage}[b][0.45\paperheight]{\textwidth}
         \usebeamerfont{sectiontitle}
         \usebeamercolor[fg]{frametitle}
         \let\hyperlink\@secondoftwo\insertsection
     \end{minipage}
     
-    \begin{minipage}[t][0.55\paperheight]{\textwidth}
-    \end{minipage}
+    \vspace*{0pt plus 100fill}
 }
 
 \AtBeginSection[]{%
