Fix hyperref warning

--- a/demo.tex
+++ b/demo.tex
@@ -6,7 +6,7 @@
 
 \title{Focus: \\ A Minimalist Beamer Theme}
 \subtitle{Subtitle}
-\author{Author 1 \\ Author 2}
+\author{Author 1\texorpdfstring{\\}{,} Author 2}
 \titlegraphic{\includegraphics[scale=1.25]{focuslogo.pdf}}
 \institute{Institute Name \\ Institute Address}
 \date{dd mm yyyy}
