Add subsection page

--- a/beamerfontthemefocus.sty
+++ b/beamerfontthemefocus.sty
@@ -30,6 +30,7 @@
 \setbeamerfont{date}{size=\large, shape=\scshape}
 
 \setbeamerfont{sectiontitle}{size=\huge, series=\scshape\bfseries}
+\setbeamerfont{subsectiontitle}{size=\Large, series=\scshape\bfseries}
 \setbeamerfont{frametitle}{size=\Large, shape=\scshape}
 
 \setbeamerfont{footline}{size=\scriptsize}
