--- a/demo.tex
+++ b/demo.tex
@@ -16,7 +16,10 @@
         \maketitle
     \end{frame}
     
+    % Use starred version (e.g. \section*{Section name})
+    % to disable (sub)section page.
     \section{Section 1}
+    \subsection{Subsection 1.1}
     \begin{frame}{Simple frame}
         This is a simple frame.
     \end{frame}
@@ -25,6 +28,7 @@
         This is a frame with plain style and it is numbered.
     \end{frame}
     
+    \subsection{Subsection 1.2}
     \begin{frame}[t]
         This frame has an empty title and is aligned to top.
     \end{frame}
