Fix numbering=none with no open section

--- a/beamerouterthemefocus.sty
+++ b/beamerouterthemefocus.sty
@@ -50,7 +50,7 @@
 }
 
 % Plain header.
-\defbeamertemplate{frametitle}{plain}{%
+\defbeamertemplate*{frametitle}{plain}{%
     % If not title page.
     \ifnum\value{framenumber}>0%
         \vspace{-1pt}%
@@ -108,7 +108,7 @@
 }
 
 % Full bar footline.
-\defbeamertemplate{footline}{fullbar}{%
+\defbeamertemplate*{footline}{fullbar}{%
     % If not appendix.
     \ifnum\mainend<0% From package appendixnumberbeamer.
         %
@@ -133,7 +133,7 @@
 }
 
 % Empty footline.
-\defbeamertemplate{footline}{none}{}
+\defbeamertemplate*{footline}{none}{}
 
 \DeclareOptionBeamer{numbering}{\def\beamer@focus@numbering{#1}}
 \ExecuteOptionsBeamer{numbering=progressbar}
@@ -152,14 +152,14 @@
     \end{tikzpicture}%
 }
 
-\defbeamertemplate{background canvas}{focusplain}{%
+\defbeamertemplate*{background canvas}{focusplain}{%
     \begin{tikzpicture}
         \clip (0,0) rectangle ++(\paperwidth,\paperheight);
         \fill[normal text.bg] (0,0) rectangle ++(\paperwidth,\paperheight);
     \end{tikzpicture}%
 }
 
-\defbeamertemplate{background canvas}{focusframe}{%
+\defbeamertemplate*{background canvas}{focusframe}{%
     \begin{tikzpicture}
         \clip (0,0) rectangle ++(\paperwidth,\paperheight);
         \fill[frametitle.bg] (0,0) rectangle ++(\paperwidth,\paperheight);        
