Fix noframenumber key

--- a/beamerinnerthemefocus.sty
+++ b/beamerinnerthemefocus.sty
@@ -84,6 +84,7 @@
    	\vspace*{0pt plus 100fill}
     
     \addtocounter{framenumber}{-1}
+    \addtocounter{realframenumber}{-1}
 }
 
 % Section page.
