--- a/focus-demo.tex
+++ b/focus-demo.tex
@@ -103,7 +103,7 @@
             \column{0.4\textwidth}
                 \begin{figure}
                     \centering
-                    \includegraphics{focuslogo.pdf}
+                    \includegraphics{focus-logo.pdf}
                     \caption{Figure caption.}
                     \label{fig:focuslogo}
                 \end{figure}
@@ -130,7 +130,7 @@
     \appendix
     \begin{frame}{References}
         \nocite{*}
-        \bibliography{demo_bibliography}
+        \bibliography{focus-demo_bibliography}
         \bibliographystyle{plain}
     \end{frame}
     
