--- a/focus-demo.tex
+++ b/focus-demo.tex
@@ -7,7 +7,7 @@
 \title{Focus: \\ A Minimalist Beamer Theme}
 \subtitle{Subtitle}
 \author{Author 1\texorpdfstring{\\}{,} Author 2}
-\titlegraphic{\includegraphics[scale=1.25]{focuslogo.pdf}}
+\titlegraphic{\includegraphics[scale=1.25]{focus-logo.pdf}}
 \institute{Institute Name \\ Institute Address}
 \date{dd mm yyyy}
 
