--- a/focus-demo.tex
+++ b/focus-demo.tex
@@ -11,6 +11,9 @@
 \institute{Institute Name \\ Institute Address}
 \date{dd mm yyyy}
 
+% Footline info is printed only if [numbering=fullbar].
+%\footlineinfo{Custom footline text}
+
 \begin{document}
     \begin{frame}
         \maketitle
