\footlineinfo{} is empty by default

--- a/beamerouterthemefocus.sty
+++ b/beamerouterthemefocus.sty
@@ -110,6 +110,7 @@
 
 % Full bar footline.
 \def\footlineinfo#1{\def\focus@footlineinfo{#1}}
+\footlineinfo{} % Empty by default.
 \defbeamertemplate{footline}{fullbar}{%
     % If not appendix.
     \ifnum\mainend<0% From package appendixnumberbeamer.
