Fix for numbering=none

--- a/beamerouterthemefocus.sty
+++ b/beamerouterthemefocus.sty
@@ -188,6 +188,8 @@
         \else%
             \ifx\beamer@focus@numbering\beamer@focus@numberingfullbar%
                 \setbeamertemplate{footline}[fullbar]%
+            \else%
+                \setbeamertemplate{footline}[none]%
             \fi%
         \fi%
         %
