Changed to new theme option fullpagenumbering

--- a/beamerouterthemefocus.sty
+++ b/beamerouterthemefocus.sty
@@ -68,6 +68,9 @@
 \newlength{\focus@pbar@leftoffset}
 \newlength{\focus@pbar@rightoffset}
 
+% Comparision token for totalframenumbering
+\def\no{no}
+
 \defbeamertemplate*{footline}{progressbar}{%
     % If not appendix.
     \ifnum\mainend<0% From package appendixnumberbeamer.
@@ -92,7 +95,11 @@
                                        ++(0,{-0.5*\the\focus@pbar@height}) node[anchor=east, text=footline.fg] {\strut\insertframenumber};
                     
                     \fill[footline.bg] (\paperwidth,0) rectangle ++(-\the\focus@pbar@rightoffset,\the\focus@pbar@height)
-                                       ++(0,{-0.5*\the\focus@pbar@height}) node[anchor=west, text=footline.fg] {\strut\inserttotalframenumber};
+                                       ++(0,{-0.5*\the\focus@pbar@height}) node[anchor=west, text=footline.fg]
+                                       {\ifx\beamer@focus@totalframenumbering\no
+                                        \else
+                                            \strut\inserttotalframenumber
+                                        \fi};
                 \end{tikzpicture}%
             \else%
                 \begin{tikzpicture}[inner xsep=0.5em, inner ysep=0.5ex]
@@ -100,8 +107,13 @@
                     \fill[footline.bg] (0,0) rectangle ++(\paperwidth,\the\focus@pbar@height);
                     
                     \node[anchor=east, footline.fg] at ({\paperwidth-\the\focus@pbar@rightoffset},{0.5*\focus@pbar@height}) {\strut\insertframenumber};
-                    \node[footline.fg] at ({\paperwidth-\the\focus@pbar@rightoffset},{0.5*\focus@pbar@height}) {\strut/};
-                    \node[anchor=west, footline.fg] at ({\paperwidth-\the\focus@pbar@rightoffset},{0.5*\focus@pbar@height}) {\strut\inserttotalframenumber};
+
+
+                    \ifx\beamer@focus@totalframenumbering\no
+                    \else
+                        \node[footline.fg] at ({\paperwidth-\the\focus@pbar@rightoffset},{0.5*\focus@pbar@height}) {\strut/};
+                        \node[anchor=west, footline.fg] at ({\paperwidth-\the\focus@pbar@rightoffset},{0.5*\focus@pbar@height}) {\strut\inserttotalframenumber};
+                    \fi
                 \end{tikzpicture}%
             \fi%
         \fi%
@@ -118,8 +130,12 @@
         \settowidth{\focus@pbar@leftoffset}{1}%
         \addtolength{\focus@pbar@leftoffset}{1.5em}%
         %
-        \settowidth{\focus@pbar@rightoffset}{\inserttotalframenumber}%
-        \addtolength{\focus@pbar@rightoffset}{1.5em}%
+        \ifx\beamer@focus@totalframenumbering\no
+            \addtolength{\focus@pbar@rightoffset}{.5em}%
+        \else
+            \settowidth{\focus@pbar@rightoffset}{\inserttotalframenumber}%
+            \addtolength{\focus@pbar@rightoffset}{1.5em}%
+        \fi
         %
         % If not title page.
         \ifnum\value{realframenumber}>0%
@@ -133,8 +149,12 @@
                 \fi
 
                 \node[anchor=east, footline.fg] at ({\paperwidth-\the\focus@pbar@rightoffset},{0.5*\focus@pbar@height}) {\strut\insertframenumber};
-                \node[footline.fg] at ({\paperwidth-\the\focus@pbar@rightoffset},{0.5*\focus@pbar@height}) {\strut/};
-                \node[anchor=west, footline.fg] at ({\paperwidth-\the\focus@pbar@rightoffset},{0.5*\focus@pbar@height}) {\strut\inserttotalframenumber};
+
+                \ifx\beamer@focus@totalframenumbering\no
+                \else
+                    \node[footline.fg] at ({\paperwidth-\the\focus@pbar@rightoffset},{0.5*\focus@pbar@height}) {\strut/};
+                    \node[anchor=west, footline.fg] at ({\paperwidth-\the\focus@pbar@rightoffset},{0.5*\focus@pbar@height}) {\strut\inserttotalframenumber};
+                \fi
             \end{tikzpicture}%
         \fi%
     \fi%
@@ -172,12 +192,16 @@
 
 \DeclareOptionBeamer{numbering}{\def\beamer@focus@numbering{#1}}
 \ExecuteOptionsBeamer{numbering=progressbar}
+\DeclareOptionBeamer{totalframenumbering}{\def\beamer@focus@totalframenumbering{#1}}
+\ExecuteOptionsBeamer{totalframenumbering=yes}
 \ProcessOptionsBeamer
 
 \def\beamer@focus@numberingprogressbar{progressbar}
 \def\beamer@focus@numberingfullbar{fullbar}
-\def\beamer@focus@numberingminimal{minimal}
 \def\beamer@focus@numberingnone{none}
+
+\def\beamer@focus@totalframenumberingyes{yes}
+\def\beamer@focus@totalframenumberingno{no}
 
 
 % BACKGROUND CANVAS TEMPLATES. -------------------------------------------------
@@ -217,11 +241,7 @@
             \ifx\beamer@focus@numbering\beamer@focus@numberingfullbar%
                 \setbeamertemplate{footline}[fullbar]%
             \else%
-                \ifx\beamer@focus@numbering\beamer@focus@numberingminimal%
-                    \setbeamertemplate{footline}[minimal]%
-                \else%
-                    \setbeamertemplate{footline}[none]%
-                \fi%
+                \setbeamertemplate{footline}[none]%
             \fi%
         \fi%
         %
