--- a/beamerthemefocus.sty
+++ b/beamerthemefocus.sty
@@ -29,6 +29,10 @@
     \PassOptionsToPackage{numbering=#1}{beamerouterthemefocus}
 }
 
+\DeclareOptionBeamer{totalframenumbering}{%
+    \PassOptionsToPackage{totalframenumbering=#1}{beamerouterthemefocus}
+}
+
 \newif\if@focus@loadfirafonts
 \@focus@loadfirafontstrue
 
