--- a/focus-demo.tex
+++ b/focus-demo.tex
@@ -11,7 +11,7 @@
 \institute{Institute Name \\ Institute Address}
 \date{dd mm yyyy}
 
-% Footline info is printed only if [numbering=fullbar] or [numbering=minimal].
+% Footline info is printed only if [numbering=fullbar].
 %\footlineinfo{Custom footline text}
 
 \begin{document}
