--- a/beamerouterthemefocus.sty
+++ b/beamerouterthemefocus.sty
@@ -164,6 +164,44 @@
     \fi%
 }
 
+\defbeamertemplate{footline}{minimal}{%
+    % If not appendix.
+    \ifnum\mainend<0% From package appendixnumberbeamer.
+        %
+        \settowidth{\focus@pbar@leftoffset}{1}%
+        \addtolength{\focus@pbar@leftoffset}{1.5em}%
+        %
+        \ifx\beamer@focus@totalframenumbering\no%
+        \settowidth{\focus@pbar@rightoffset}{}%
+        \addtolength{\focus@pbar@rightoffset}{0.5em}%
+        \else%
+        \settowidth{\focus@pbar@rightoffset}{\inserttotalframenumber}%
+        \addtolength{\focus@pbar@rightoffset}{1.5em}%
+        \fi%
+        %
+        % If not title page.
+        \ifnum\value{realframenumber}>0%
+        \begin{tikzpicture}[inner xsep=0.5em, inner ysep=0.5ex]
+            \clip (0,0) rectangle ++(\paperwidth,\the\focus@pbar@height);
+            \fill[footline.fg] (0,0) rectangle ++(\paperwidth,\the\focus@pbar@height);
+
+            \ifx\focus@footlineinfo\empty%
+            \else%
+                \node[anchor=west, footline.bg] at ({\the\focus@pbar@leftoffset},{0.5*\focus@pbar@height}) {\focus@footlineinfo};
+            \fi%
+
+            \node[anchor=east, footline.bg] at ({\paperwidth-\the\focus@pbar@rightoffset},{0.5*\focus@pbar@height}) {\strut\insertframenumber};
+
+            \ifx\beamer@focus@totalframenumbering\no%
+            \else%
+                \node[footline.bg] at ({\paperwidth-\the\focus@pbar@rightoffset},{0.5*\focus@pbar@height}) {\strut/};
+                \node[anchor=west, footline.bg] at ({\paperwidth-\the\focus@pbar@rightoffset},{0.5*\focus@pbar@height}) {\strut\inserttotalframenumber};
+            \fi%
+        \end{tikzpicture}%
+        \fi%
+    \fi%
+}
+
 % Empty footline.
 \defbeamertemplate{footline}{none}{}
 
@@ -177,6 +215,7 @@
 
 \def\beamer@focus@numberingprogressbar{progressbar}
 \def\beamer@focus@numberingfullbar{fullbar}
+\def\beamer@focus@numberingminimal{minimal}
 \def\beamer@focus@numberingnone{none}
 
 \def\beamer@focus@totalframenumberingyes{yes}
@@ -220,7 +259,11 @@
             \ifx\beamer@focus@numbering\beamer@focus@numberingfullbar%
                 \setbeamertemplate{footline}[fullbar]%
             \else%
-                \setbeamertemplate{footline}[none]%
+                \ifx\beamer@focus@numbering\beamer@focus@numberingminimal%
+                    \setbeamertemplate{footline}[minimal]%
+                \else%
+                    \setbeamertemplate{footline}[none]%
+                \fi
             \fi%
         \fi%
         %
